--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -11,6 +11,8 @@
     "react-native": "0.59.9",
     "react-native-app-intro-slider": "^2.0.1",
     "react-native-elements": "^1.1.0",
+    "react-native-facebook-login": "^1.6.1",
+    "react-native-fbsdk": "^0.10.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0"
