--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -12,8 +12,11 @@
     "react-native-app-intro-slider": "^2.0.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-vector-icons": "^6.5.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
