--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "dev": "react-native run-android --port 8088",
     "test": "jest"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "react-native-fbsdk": "^0.10.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-i18n": "^2.0.15",
+    "react-native-tab-view": "^2.7.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
@@ -26,6 +28,7 @@
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
+    "random-key": "^0.3.2",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
