--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -21,7 +21,10 @@
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
