--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -17,7 +17,7 @@
     "react-native-facebook-login": "^1.6.1",
     "react-native-fbsdk": "^0.10.1",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-i18n": "^2.0.15",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
