--- a/CookApp/.eslintrc
+++ b/CookApp/.eslintrc
@@ -16,7 +16,7 @@
     "one-var": "off",
     "eol-last": "off",
     "comma-dangle": "off",
-    "indent": [1, "tab"],
+     "indent": ["error", 2],
     "array-bracket-spacing": "off",
     "object-property-newline": "off",
     "object-curly-newline": "off",
