fix some minor bugs

--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -48,7 +48,8 @@
     "eslint-plugin-flowtype": "^3.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "eslint-plugin-react": "^7.11.0",
+    "react-native-i18n": "^2.0.15"
   },
   "jest": {
     "preset": "react-native"
