--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "axios": "^0.19.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-app-intro-slider": "^2.0.1",
     "react-native-elements": "^1.1.0",
     "react-native-facebook-login": "^1.6.1",
+    "react-native-fbsdk": "^0.10.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-otp-inputs": "^3.2.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
