--- a/CookApp/.eslintrc
+++ b/CookApp/.eslintrc
@@ -30,7 +30,7 @@
     "import/no-named-as-default": "off",
     "import/prefer-default-export": "off",
     "react/require-default-props": "off",
-    "react/forbid-prop-types": "off",
+    "react/forbid-prop-types": 0,
     "react/sort-comp": "off",
     "react/no-unused-prop-types": "off",
     "react/no-array-index-key": "off",
@@ -43,7 +43,10 @@
     "react/jsx-closing-tag-location": "off",
     "react/jsx-space-before-closing": "off",
     "react/jsx-tag-spacing": "off",
-		"linebreak-style": [0,"error", "windows"]
+    "linebreak-style": [0,"error", "windows"],
+    "no-console": "off",
+    "no-useless-concat": 0,
+    "object-shorthand": 0,
   },
   "globals": {
     "localStorage": true,
