--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-facebook-login": "^1.6.1",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-crop-picker": "0.25.0",
     "react-native-image-picker": "^1.0.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-modal-datetime-picker": "^7.5.0",
@@ -31,17 +32,14 @@
     "redux-saga": "^0.16.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/runtime": "^7.3.4",
-    "babel-jest": "^24.5.0",
-    "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.54.1",
-    "react-test-renderer": "16.8.3",
     "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/runtime": "^7.3.4",
     "@hot-loader/react-dom": "^16.8.4",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.2",
     "chokidar": "^2.1.2",
@@ -52,7 +50,11 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
-    "react-native-i18n": "^2.0.15"
+    "jest": "24.8.0",
+    "jetifier": "^1.6.3",
+    "metro-react-native-babel-preset": "0.54.1",
+    "react-native-i18n": "^2.0.15",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
