--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -22,6 +22,7 @@
     "react-native-linear-gradient": "^2.5.4",
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-otp-inputs": "^3.2.0",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
