--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -19,6 +19,7 @@
     "react-native-facebook-login": "^1.6.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^1.0.1",
+    "react-native-input-spinner": "^1.1.9",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-modal": "^11.1.0",
     "react-native-modal-datetime-picker": "^7.5.0",
