--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -23,6 +23,7 @@
     "react-native-modal": "^11.1.0",
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-otp-inputs": "^3.2.0",
+    "react-native-progress": "^3.6.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
