--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "link": "^0.1.5",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "16.8.3",
-    "react-native": "0.59.9",
+    "react-native": "^0.59.9",
     "react-native-app-intro-slider": "^2.0.1",
     "react-native-elements": "^1.1.0",
     "react-native-facebook-login": "^1.6.1",
@@ -24,6 +25,7 @@
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-otp-inputs": "^3.2.0",
     "react-native-progress": "^3.6.0",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
