--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^1.0.1",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.1.0",
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-otp-inputs": "^3.2.0",
