--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -27,6 +27,7 @@
     "react-native-progress": "^3.6.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.5.14",
+    "react-native-tag-input": "0.0.21",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
