--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "eslint-config-airbnb-base": "^13.2.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "16.8.3",
@@ -49,10 +50,10 @@
     "chalk": "^2.4.2",
     "chokidar": "^2.1.2",
     "css-loader": "^2.1.1",
-    "eslint": "^5.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-flowtype": "^3.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "jest": "24.8.0",
