--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -26,6 +26,7 @@
     "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-otp-inputs": "^3.2.0",
     "react-native-progress": "^3.6.0",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.5.14",
     "react-native-tag-input": "0.0.21",
