--- a/CookApp/package.json
+++ b/CookApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "eslint-config-airbnb-base": "^13.2.0",
+    "joi": "^14.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "16.8.3",
